# AdAlignLLM

./: README.md  multigpu_tas_rps_naive_vs_gptoss.sh  pyproject.toml  render.py  render_benchmark_matrix.py  requirements.txt  run.py  run_benchmarks.py  unzip_iterations.py  upload_to_hf.py  zip_iterations.py
configs/: base.yaml  benchmark_ipd.yaml  benchmark_matrix_template.yaml  benchmark_split_no_comm.yaml  benchmark_tas_rps.yaml  benchmark_tas_rps_alt.yaml  human_bob_ipd.yaml  human_bob_split_no_comm.yaml  human_bob_tas_rps.yaml  ipd_naive.yaml  ipd_naive_gemma3_4b.yaml  ipd_naive_gemma3_4b_seed1337.yaml  ipd_naive_gemma3_4b_seed42.yaml  ipd_naive_llama3_8b.yaml  ipd_naive_llama3_8b_seed1337.yaml  ipd_naive_llama3_8b_seed42.yaml  ipd_naive_qwen3_8b.yaml  ipd_naive_qwen3_8b_seed1337.yaml  ipd_naive_qwen3_8b_seed42.yaml  ipd_naive_seed1337.yaml  ipd_naive_seed42.yaml  ipd_sum_of_rewards.yaml  ipd_vanilla_ad_align.yaml  ipd_vanilla_ad_align_no_agent_buffer.yaml  ipd_vanilla_ad_align_no_agent_buffer_seed1337.yaml  ipd_vanilla_ad_align_no_agent_buffer_seed42.yaml  ipd_vanilla_ad_align_no_group_baseline.yaml  ipd_vanilla_ad_align_no_group_baseline_seed1337.yaml  naive_vs_fixed_ad_align.yaml  split_no_comm_naive.yaml  split_no_comm_naive_gemma3_4b.yaml  split_no_comm_naive_gemma3_4b_seed1337.yaml  split_no_comm_naive_gemma3_4b_seed42.yaml  split_no_comm_naive_llama3_8b.yaml  split_no_comm_naive_llama3_8b_seed1.yaml  split_no_comm_naive_llama3_8b_seed123.yaml  split_no_comm_naive_llama3_8b_seed1337.yaml  split_no_comm_naive_llama3_8b_seed42.yaml  (+58 more)
mllm/: __init__.py
(+66 files in other folders)
