[project]
name = "mllm"
version = "0.1.0"
description = "Multi-agent reinforcement learning for large language models"
authors = [
  { name = "Anonymous" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"


[project.urls]
# URLs will be provided upon publication

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mllm"]
package-dir = { "mllm" = "mllm" }
